# gof-python

./: README.md  pyproject.toml
src/iterator/: main.py
